--- a/flask_project/templates/index.html
+++ b/flask_project/templates/index.html
@@ -5,12 +5,17 @@
     <title>MitramCares</title>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script defer>
-        var socket = io('http://35.200.207.120:8080');
+        var socket = io('http://localhost:8080');
         socket.on('bot_response', function(data) {
-        var audioBlob = new Blob([data.audio], { type: 'audio/wav' }); // Assuming WAV format
-        var audioURL = URL.createObjectURL(audioBlob);
-        var audio = new Audio(audioURL);
-        audio.play();
+            console.log("data.socketId -->",data.socketId)
+            console.log("socketId -->",socket.id)
+             if (data.socketid === socket.id) {
+                 var audioBlob = new Blob([data.audio], {type: 'audio/wav'});
+                 var audioURL = URL.createObjectURL(audioBlob);
+                 var audio = new Audio(audioURL);
+                 audio.play();
+             }
+
     });
 
    function startRecording(language) {
@@ -28,7 +33,7 @@
                mediaRecorder.onstop = e => {
                    const blob = new Blob(chunks, { type: 'audio/ogg; codecs=opus' }); // Or other audio format
                    console.log("Recording:", blob);
-                   socket.emit('audio_data', {blob, language: language}, (response) => {
+                   socket.emit('audio_data', {blob, language: language, socketid: socket.id}, (response) => {
                     // Handle potential errors and responses from the server
                        console.log("response ",response )
                     });
